--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrapCalc">
+        <div class="forDrop">&#9995;</div>
         <input class="result" type="text" value="">
         <input class="ent" type="text" value="">
         <button class="but7 btnCalc" value="7">7</button>
